# RoboVision3D

./: README.md
src/host/dense_reconstruction/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_dense_reconstruction.xml
src/host/dense_reconstruction/cfg/: Disparity.cfg  Disparity.cfgc  Disparity.cfg~  DisparitySGBM.cfg  DisparitySGBM.cfgc  DisparitySGBM.cfg~
src/host/dense_reconstruction/cfg/cpp/dense_reconstruction/: DisparityConfig.h  DisparitySGBMConfig.h
src/host/dense_reconstruction/docs/: DisparityConfig-usage.dox  DisparityConfig.dox  DisparityConfig.wikidoc  DisparitySGBMConfig-usage.dox  DisparitySGBMConfig.dox  DisparitySGBMConfig.wikidoc
src/host/dense_reconstruction/include/dense_reconstruction/: processor.h
src/host/dense_reconstruction/include/dense_reconstruction/.svn/: entries
src/host/dense_reconstruction/launch/: dense_reconstruction.launch  dense_reconstruction.launch~  test.launch~
src/host/dense_reconstruction/src/: dense_reconstruction.cpp  dense_reconstruction.cpp~
src/host/dense_reconstruction/src/dense_reconstruction/cfg/: DisparityConfig.py  DisparitySGBMConfig.py
src/host/dense_reconstruction/src/libdense_reconstruction/: processor.cpp
src/host/dense_reconstruction/src/nodelets/: disparity.cpp  disparitySGBM.cpp  point_cloud2.cpp
src/host/vrm3dvision_backup/: .cproject  CMakeLists.txt  manifest.xml
src/host/vrm3dvision_backup/launch/: Calibration.launch~  DenseStereoReconstruction.launch~  Live.launch~  Multi_Exposure_Pattern.launch  Multi_Exposure_Pattern.launch~  Pose_Estimation_Live.launch~  Pose_Estimation_Sim.launch~  STLsimulation.launch~  ShowImages.launch  ShowImages.launch~  commands.txt  commands.txt~  poseestimation.launch~  stl_sim.launch~  test.launch~  testing.launch~  vis3.launch~  vrm3dvision.launch~  vrm3dvisionCalibration.launch~  vrm3dvisionShowImages.launch~  vrm3dvisionSim.launch~  vrm3dvisionwstereoimageproc.launch
src/host/vrm3dvision_backup/msg/: AlignmentPrerejectiveParams.msg
src/host/vrm3dvision_backup/msg_gen/lisp/: SurfaceModelParams.lisp  _package.lisp
src/host/vrm3dvision_backup/src/pcl_pointcloud_viewer/: pcl_pointcloud_viewer_node.cpp~
src/host/vrm3dvision_backup/src/pose_estimation/: alignment_prerejective.cpp  pose_estimator.cpp  sample_consensus_prerejective_jk.h  sample_consensus_prerejective_jk.hpp  sample_consensus_prerejective_jkp.h  sample_consensus_prerejective_jkp.hpp  surface_model_estimator.hpp
src/host/vrm3dvision_backup/src/vrm3dvision/msg/: _SurfaceModelParams.py
src/host/vrm3dvision_backup/src/vrm3dvision/srv/: __init__.py  _acquirePoseEstimate.py  _computeBestExposure.py  _saveNextSequence.py  _setMode.py  _setPattern.py  (+3 more)
src/host/vrm3dvision_backup/src/vrm_calibration/: vrm_calibration.cpp  vrm_calibration.hpp
src/host/vrm3dvision_backup/src/vrm_command/: vrm_command.hpp
src/host/vrm3dvision_backup/src/vrm_image_proc/: occlusion_mask.cpp  structured_light_reconstruction.cpp  structured_light_reconstruction.hpp  vrm_image_proc.cpp  vrm_image_proc.hpp  vrm_image_proc_node.cpp
src/host/vrm3dvision_backup/src/vrm_log/: vrm_log_node.cpp
src/host/vrm3dvision_backup/src/zmq_image_publisher/: zmq_image_publisher_node.cpp
src/host/vrm3dvision_backup/srv/: saveNextSequence.srv  setExposure.srv  setFrameRate.srv  setMode.srv  triggerCamera.srv
src/host/vrm3dvision_backup/srv_gen/lisp/: _package.lisp  _package_acquirePoseEstimate.lisp  _package_computeBestExposure.lisp  _package_createNewModel.lisp  _package_saveNextSequence.lisp  _package_setGain.lisp  _package_setMode.lisp  _package_setPattern.lisp  _package_startCamera.lisp  _package_triggerCamera.lisp  acquirePoseEstimate.lisp  acquireSequenceOnRobot.lisp  saveNextSequence.lisp  setGain.lisp  setMode.lisp  setPattern.lisp
src/modelling/modelling_engine/: CMakeLists.txt  package.xml
src/modelling/modelling_engine/include/modelling_engine/: ReconstructPointCloud.h  RegistrationNode.h  RosInterface.h  ScanData.hpp  SharedData.hpp  tiv_types.hpp
src/modelling/modelling_engine/launch/: modelling_engine.launch
src/modelling/modelling_engine/src/: ReconstructPointCloud.cpp  ReconstructPointCloud.cpp~  RegistrationNode.cpp  RegistrationNode.cpp~  RosInterface.cpp  RosInterface.cpp~  ScanData.cpp  SharedData.cpp  main.cpp  main.cpp~  modelling_engine_ctrl.cpp  modelling_engine_ctrl.cpp~  rot.cpp  tiv_types.cpp
src/modelling/modelling_engine/src/modelling_engine/: ReconstructPointCloud.cpp  RegistrationNode.cpp  RosInterface.cpp  ScanData.cpp  SharedData.cpp
src/modelling/modelling_engine/srv/: StartAcquisition.srv
src/reconstruction/simulated_kinect/: CMakeLists.txt  RobWorkStudio.ini  move.sh  package.xml  run_sim.sh  rwsettings.xml
src/reconstruction/simulated_kinect/action/: Scan.action
src/reconstruction/simulated_kinect/include/simulated_kinect/: ROS_Sensor.hpp  RosInterface.h  SimulatedSensor.h  ui_SensorsPlugin.h
src/reconstruction/simulated_kinect/launch/: simulated_kinect.launch
src/reconstruction/simulated_kinect/msg/: ScanAction.msg  ScanFeedback.msg
src/reconstruction/simulated_kinect/src/: ROS_Sensor.cpp  RosInterface.cpp  ScanActionClient.cpp  SensorView.cpp  SensorsPlugin.ui  test_client.cpp  ui_SensorsPlugin.h
src/reconstruction/structured_light_scanner/: CMakeLists.txt  package.xml
src/reconstruction/structured_light_scanner/include/structured_light_scanner/: IActionServer.h  Imagebuffer.h  LoadCalibParameters.h  OcclusionMask.h  Perception3Dctrl.h  Reconstruction3D.h  ScanActionServer.h
src/reconstruction/structured_light_scanner/launch/: structured_light_scanner.launch
src/reconstruction/structured_light_scanner/msg/: ScanActionFeedback.msg  ScanActionGoal.msg  ScanActionResult.msg  ScanGoal.msg  ScanResult.msg
src/reconstruction/structured_light_scanner/src/: LoadCalibParameters.cpp  OcclusionMask.cpp  Perception3Dctrl.cpp  Perception_3D.cpp  Reconstruction3D.cpp  ScanActionClient.cpp  ScanActionServer.cpp
src/reconstruction/structured_light_scanner/src/Projector_controller/: CamTrigger.cpp  CamTrigger.h  ProjectorUI.cpp  ProjectorUI.h  Projector_Ctrl.cpp
(+360 files in other folders)
